Switched G1C on in perf-test.sh